add button all partners

--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@
                 </div>
                 <h2 class="impact-number" data-target="72">0</h2>
                 <p class="lead subtitle">PARTNERS</p>
+                <div class="text-center mt-3">
+                  <a
+                    href="partners.html"
+                    class="btn btn-outline-success partners-btn"
+                    data-aos="fade-up"
+                  >
+                    View All Partners
+                  </a>
+                </div>
               </div>
 
               <!-- Countries -->
