add new section

--- a/index.html
+++ b/index.html
@@ -517,17 +517,30 @@
             </div>
           </div>
         </div>
+
+        <section
+          id="advocacy-hero"
+          class="hero-section text-white text-center d-flex align-items-center justify-content-center mt-5"
+        >
+          <div class="overlay"></div>
+          <div class="hero-content p-4" data-aos="fade-up">
+            <h1 class="display-5 fw-bold mb-3">
+              Advocating for sustainability
+            </h1>
+            <p class="lead mb-4">
+              Using innovation, data and technology to create a more sustainable
+              and just future for farmers, rural livelihoods and the
+              environment.
+            </p>
+          </div>
+        </section>
       </div>
     </section>
 
     <!-- resources -->
     <section id="resources" class="py-5 text-center text-white">
       <div class="container" data-aos="fade-up">
-        <h2 class="fw-bold mb-3">Advocating for sustainability</h2>
-        <p class="mb-4">
-          Using innovation, data and technology to create a more sustainable and
-          just future for farmers, rural livelihoods and the environment.
-        </p>
+        <h2 class="fw-bold mb-3">RESOURCES</h2>
         <!-- Link Cards -->
         <div class="row mt-5 justify-content-center">
           <!-- Work Packages -->
